# mulciber

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  vulkan-toolchain.lock.toml
comparisons/: Cargo.toml
comparisons/harness/: resize-storm.js  run-resize-storm.sh
comparisons/metal-game-slice/: Cargo.toml
comparisons/metal-game-slice/src/: game.rs  gpu.rs  main.rs  scene.rs
comparisons/wgpu-cube/: Cargo.toml
comparisons/wgpu-cube/src/: main.rs  scene.rs
comparisons/wgpu-game-slice/: Cargo.toml
comparisons/wgpu-game-slice/src/: game.rs  gpu.rs  main.rs  pacing.rs  scene.rs
comparisons/wgpu-input-cube/: Cargo.toml
comparisons/wgpu-input-cube/src/: main.rs  scene.rs
comparisons/wgpu-instanced-scene/: Cargo.toml
comparisons/wgpu-instanced-scene/src/: gpu.rs  main.rs  scene.rs
comparisons/wgpu-postprocess-cube/: Cargo.toml
comparisons/wgpu-postprocess-cube/src/: main.rs  scene.rs
comparisons/wgpu-scene/: Cargo.toml
comparisons/wgpu-scene/src/: gpu.rs  main.rs  scene.rs
comparisons/wgpu-showcase-cube/: Cargo.toml
comparisons/wgpu-showcase-cube/src/: gpu.rs  main.rs  scene.rs
crates/mulciber/: Cargo.toml  README.md
crates/mulciber-platform/: Cargo.toml  README.md
crates/mulciber-platform/src/: lib.rs  linux.rs  macos.rs  win32.rs
crates/mulciber-platform/src/linux/: keymap.rs  wayland.rs  x11.rs
crates/mulciber-runtime/: Cargo.toml  README.md
crates/mulciber-runtime/src/: input.rs  lib.rs  pacing.rs  timing.rs
crates/mulciber-shader/: Cargo.toml  README.md
crates/mulciber-shader/src/: lib.rs  main.rs
crates/mulciber/src/: clear.rs  graphics.rs  lib.rs  presentation.rs  resource.rs  shader.rs
crates/mulciber/src/backend/: mod.rs
crates/mulciber/src/backend/metal/: mod.rs  objc.rs  textured.rs
crates/mulciber/src/backend/vulkan/: clear.rs  mod.rs  platform.rs  vk.rs
crates/mulciber/src/backend/vulkan/clear/: textured.rs  timing.rs
crates/zinc-gpu/: Cargo.toml
crates/zinc-platform/: Cargo.toml
docs/: api-cube-contract.md  api-extraction-plan.md  api-first-slice.md  api-graphics-contract.md  api-platform-contract.md  api-slice-decisions.md  architecture.md  backend-contracts.md  consumer-evidence.md  game-slice-comparison.md  game-slice.md  gate2-comparison.md  gate3-cold-start-plan.md  gate3-cold-start-results.md  gate4-pacing-plan.md  input-contract.md  instancing-contract.md  linux-validation.md  macos-validation.md  maintenance-ledger.md  material-contract.md  material-slice-plan.md  mesh-parts-contract.md  postprocess-contract.md  references.md  roadmap.md  runtime-contract.md  scene-contract.md  shader-toolchain-evaluation.md  support-contract.md  viability-gates.md  vision.md  vulkan-bc1.md  vulkan-pipeline-cache.md  windows-validation.md
examples/capability-report/: Cargo.toml
examples/capability-report/src/: main.rs
examples/clear/: Cargo.toml
examples/clear/src/: main.rs
examples/cube/: Cargo.toml  build.rs
examples/cube/artifacts/: cube.metal.shaderbin  cube.vulkan.shaderbin
examples/cube/src/: cube.wgsl  main.rs  scene.rs
examples/game-slice/: Cargo.toml  build.rs
examples/game-slice/src/: game.rs  main.rs  scene.rs
examples/input-cube/: Cargo.toml  build.rs
examples/input-cube/src/: main.rs  scene.rs
examples/instanced-scene/: Cargo.toml  build.rs
examples/instanced-scene/artifacts/: instanced.metal.shaderbin  instanced.vulkan.shaderbin
examples/instanced-scene/src/: instanced.wgsl  main.rs  scene.rs
examples/material-scene/: Cargo.toml  build.rs
examples/material-scene/artifacts/: crystal.metal.shaderbin  crystal.vulkan.shaderbin  hud.metal.shaderbin  hud.vulkan.shaderbin  lava.metal.shaderbin  lava.vulkan.shaderbin  shadow.metal.shaderbin  shadow.vulkan.shaderbin  skinned-shadow.metal.shaderbin  skinned-shadow.vulkan.shaderbin  skinned.metal.shaderbin  skinned.vulkan.shaderbin  sprout-shadow.metal.shaderbin  sprout-shadow.vulkan.shaderbin  sprout.metal.shaderbin  sprout.vulkan.shaderbin
examples/material-scene/src/: crystal.wgsl  hud.wgsl  lava.wgsl  main.rs  scene.rs  shadow.wgsl  skinned-shadow.wgsl  skinned.wgsl  sprout-shadow.wgsl  sprout.wgsl
examples/postprocess-cube/: Cargo.toml  build.rs
examples/postprocess-cube/artifacts/: postprocess-uniform.vulkan.shaderbin  postprocess.metal.shaderbin  postprocess.vulkan.shaderbin
examples/postprocess-cube/src/: main.rs  postprocess-uniform.wgsl  postprocess.wgsl  scene.rs
examples/scene/: Cargo.toml  build.rs
examples/scene/src/: main.rs  scene.rs
examples/showcase-cube/: Cargo.toml  build.rs
probes/api-clear/: Cargo.toml
probes/api-clear/src/: main.rs
probes/api-conformance/: Cargo.toml  build.rs
probes/api-conformance/src/: main.rs
probes/api-cube/: Cargo.toml  build.rs
probes/api-cube/src/: main.rs
probes/metal-info/: Cargo.toml
probes/metal-triangle/: Cargo.toml  build.rs
probes/vulkan-info/: Cargo.toml
probes/vulkan-info/src/: linux.rs  main.rs  report.rs  wayland.rs  windows.rs  x11.rs
probes/vulkan-triangle/: Cargo.toml
probes/vulkan-triangle/src/: linux.rs  main.rs  post.frag.spv  post.vert.spv  storage.comp  triangle.frag.spv  triangle.vert.spv  vulkan.rs  wayland.rs  win32.rs  x11.rs
probes/vulkan-triangle/src/vulkan/: options.rs  pipeline_cache.rs  renderer_assets.rs  renderer_compute.rs  renderer_frame.rs  renderer_instrumentation.rs  renderer_pacing.rs  renderer_pipelines.rs  renderer_present.rs  renderer_retirement.rs  renderer_setup.rs  renderer_timing.rs  resize_trace.rs
probes/vulkan-win32-triangle/: Cargo.toml
scripts/: validate-windows.ps1
tools/shader-toolchain/: Cargo.toml  README.md
tools/shader-toolchain/shaders/slang/: bindless.slang  compute_storage.slang  indirect_args.slang  mesh.slang  ray_pipeline.slang  ray_query.slang  scene.slang
tools/shader-toolchain/shaders/wgsl/: bindless.wgsl  compute_storage.wgsl  indirect_args.wgsl  mesh.wgsl  ray_pipeline.wgsl  ray_query.wgsl  scene.wgsl
tools/shader-toolchain/src/: main.rs  metal_runtime.rs
tools/vulkan-bindgen/: Cargo.toml  README.md  symbols.txt
tools/vulkan-bindgen/src/: main.rs
(+28 files in other folders)
