[workspace]
resolver = "3"
members = [
    "crates/mulciber",
    "crates/mulciber-platform",
    "crates/mulciber-shader",
    "examples/clear",
    "examples/cube",
    "probes/metal-info",
    "probes/metal-triangle",
    "probes/vulkan-info",
    "probes/vulkan-triangle",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.97"
version = "0.0.0"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
