[package]
name = "metal-game-slice"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[dependencies]
bytemuck = { version = "=1.25.1", features = ["derive"] }
core-graphics-types = "=0.2.0"
glam = "=0.33.2"
metal = "=0.33.0"
objc2 = "=0.6.4"
objc2-app-kit = { version = "=0.3.2", default-features = false, features = [
    "std",
    "objc2-quartz-core",
    "NSApplication",
    "NSEvent",
    "NSGraphics",
    "NSResponder",
    "NSRunningApplication",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "std",
    "NSDate",
    "NSGeometry",
    "NSRunLoop",
    "NSString",
] }
objc2-quartz-core = { version = "=0.3.2", default-features = false, features = ["std", "CALayer"] }
