[package]
name = "mulciber-platform"
description = "Native desktop platform layer for Mulciber"
edition.workspace = true
homepage = "https://github.com/fairhill1/mulciber"
keywords = ["gamedev", "windowing", "metal", "vulkan"]
license.workspace = true
readme = "README.md"
repository = "https://github.com/fairhill1/mulciber"
rust-version.workspace = true
version = "0.4.2"
categories = ["game-development", "graphics"]
publish = ["crates-io"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[lints]
workspace = true
