[package]
name = "mulciber-runtime"
description = "Game-loop timing and input snapshots for Mulciber"
edition.workspace = true
homepage = "https://github.com/fairhill1/mulciber"
keywords = ["gamedev", "game-loop", "input", "metal", "vulkan"]
license.workspace = true
readme = "README.md"
repository = "https://github.com/fairhill1/mulciber"
rust-version.workspace = true
version = "0.4.0"
categories = ["game-development"]
publish = ["crates-io"]

[dependencies]
mulciber-platform = { path = "../mulciber-platform", version = "0.4.0" }

[lints]
workspace = true
