[package]
name = "mulciber"
version = "0.8.2"
description = "Native Vulkan and Metal graphics layer for the Mulciber game-development stack"
edition.workspace = true
homepage = "https://github.com/fairhill1/mulciber"
keywords = ["gamedev", "graphics", "metal", "vulkan"]
license.workspace = true
readme = "README.md"
repository = "https://github.com/fairhill1/mulciber"
rust-version.workspace = true
categories = ["game-development", "graphics", "rendering"]
publish = ["crates-io"]

[lints]
workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
mulciber-platform = { version = "0.5.0", path = "../mulciber-platform" }
