[package]
name = "mulciber-postprocess-cube"
description = "Two-pass textured cube through Mulciber's native Metal and Vulkan backends"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
glam = { version = "0.33.2", default-features = false, features = ["std"] }
mulciber = { path = "../../crates/mulciber" }
mulciber-platform = { path = "../../crates/mulciber-platform" }

[lints]
workspace = true
