[package]
name = "mulciber-scene"
description = "Multi-object scene pressure test for Mulciber's experimental draw-list API"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
glam = { version = "0.33.2", default-features = false, features = ["std"] }
mulciber = { path = "../../crates/mulciber" }
mulciber-platform = { path = "../../crates/mulciber-platform" }

[lints]
workspace = true
