[package]
name = "mulciber-api-conformance"
description = "Asserted conformance cases for Mulciber's public graphics API slice"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
mulciber = { path = "../../crates/mulciber" }
mulciber-platform = { path = "../../crates/mulciber-platform" }

[lints]
workspace = true
