[package]
name = "mulciber-api-cube"
description = "Validation harness for Mulciber's public textured-cube API slice"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
glam = { version = "0.33.2", default-features = false, features = ["std"] }
mulciber = { path = "../../crates/mulciber" }
mulciber-platform = { path = "../../crates/mulciber-platform" }
mulciber-runtime = { path = "../../crates/mulciber-runtime" }

[lints]
workspace = true
