[package]
name = "mulciber-vulkan-info"
description = "Direct Vulkan device and presentation capability report for Mulciber"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
mulciber-platform = { path = "../../crates/mulciber-platform" }
