[package]
name = "mulciber-vulkan-triangle"
description = "Native Vulkan presentation probe for Mulciber"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
mulciber = { path = "../../crates/mulciber" }
mulciber-platform = { path = "../../crates/mulciber-platform" }
