[package]
name = "mulciber-vulkan-triangle"
description = "Native Vulkan presentation probe for Mulciber"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
mulciber-platform = { path = "../../crates/mulciber-platform" }
